--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,15 @@ body {
 	overflow-x: hidden;
 }
 
+h1, h2, h3, h4 {
+	font-family: 'Open Sans', serif;
+	font-weight: 700;
+	color: #232323;
+}
+
 section.header {
 	display: flex;
-	height: 80vh;
+	height: 100vh;
 }
 
 section.header--welcome {
@@ -37,8 +43,24 @@ section.header--welcome {
     align-items: center;
 }
 
+section.header--welcome article {
+	width: 80%;
+}
+
+p span {
+	font-weight: 700;
+}
+
 section.header--imgs {
 	background: #232323;
 	min-height: 100%;
 	width: 70%;
+	display: flex;
+	flex-wrap: wrap;
+	overflow: hidden;
+}
+
+section.header--imgs img {
+	width: 20%;
+	height: 100%;
 }
