--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,18 @@ h1, h2, h3, h4 {
 	color: #232323;
 }
 
+p span {
+	font-weight: 700;
+}
+
+button {
+	border: none;
+	outline: none;
+	background: none;
+}
+
+/*------------------*/
+
 section.header {
 	display: flex;
 	height: 100vh;
@@ -41,15 +53,54 @@ section.header--welcome {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+
+section.header--welcome article,
+section.header--welcome aside {
+	width: 80%;
+	border: 1px solid #232323;
 }
 
 section.header--welcome article {
-	width: 80%;
+	margin-bottom: 2.5em; 
+	padding-top: 0.7em;
 }
 
-p span {
-	font-weight: 700;
+section.header--welcome h1 {
+	font-size: 2.47em;
+    letter-spacing: -0.04em;
+    margin: 0.45em 0;
 }
+
+section.header--welcome img {
+	width: 25%;
+	margin-bottom: -15px;
+
+} 
+
+section.header--welcome article p {
+	padding: 0.7em;
+    font-size: 1.1em;
+    line-height: 1.35em;
+}
+
+section.header--welcome aside {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+section.header--welcome aside h3 {
+	font-size: 1em;
+	text-align: center;
+	padding: 0.5em;
+}
+
+section.header--welcome button {
+	padding: 0.5em;
+}
+
 
 section.header--imgs {
 	background: #232323;
